# tigrqc

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: update-docs.yml
docs/: mkdocs_gen.py  mkdocs_gen_api.py  navigation.md
docs/config/: database.md
tests/config/: test_database.py
tigrqc/: __init__.py  exceptions.py  extensions.py
tigrqc/config/: __init__.py  database.py  utils.py
tigrqc/models/: mixins.py
