[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tigrqc"
version = "0.0.1"
requires-python = ">=3.12"
description = "TIGR Lab's Quality Control dashboard for MRI data."
readme = "README.md"
authors = [
    {name = "TIGR Lab", email = "TIGR.Lab@camh.ca"},
    {name = "Dawn Smith", email = "Dawn.Smith@camh.ca"}
]
keywords = ["neuroimaging", "mri", "quality control", "QC"]

dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
]
