[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tigrqc"
version = "0.0.1"
requires-python = ">=3.12"
description = "TIGR Lab's Quality Control dashboard for MRI data."
readme = "README.md"
authors = [
    {name = "TIGR Lab", email = "TIGR.Lab@camh.ca"},
    {name = "Dawn Smith", email = "Dawn.Smith@camh.ca"}
]
keywords = ["neuroimaging", "mri", "quality control", "QC"]

dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-quotes>=3.4.0",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
]

[tool.setuptools.packages.find]
include = ["tigrqc", "config"]
