[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tigrqc"
version = "0.0.1"
requires-python = ">=3.12"
description = "TIGR Lab's Quality Control dashboard for MRI data."
readme = "README.md"
authors = [
    {name = "TIGR Lab", email = "TIGR.Lab@camh.ca"},
    {name = "Dawn Smith", email = "Dawn.Smith@camh.ca"}
]
keywords = ["neuroimaging", "mri", "quality control", "QC"]

dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-quotes>=3.4.0",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
]
docs = [
    "black>=26.3.0",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-material>=9.7.4",
    "mkdocstrings-python>=2.0.3",
]
extras = [
    "ipython>=9.11.0",
]
tests = [
    "pytest>=9.0.2",
]
